Rettelser i billedet på forsiden og meta content. Rettelser i tourplanen

--- a/zarp3/index.html
+++ b/zarp3/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
   <meta name="description" content="Zar Paulo">
-  <meta name="keywords" content="Zar Paulo, Zarpaulo, 80er, dansk, zar paulo, spotify, band, rock, synth, pop, ung, rock band, ">
+  <meta name="keywords"
+    content="Zar Paulo, Zarpaulo, 80er, dansk, zar paulo, spotify, band, rock, synth, pop, ung, rock band, ">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zar Paulo</title>
   <link rel="stylesheet" href="css/style.css">
@@ -17,9 +18,10 @@
     <nav>
       <div class="burgermenu">
         <div class="boxa"> <label for="toggle">&#9776;</label> </div>
-        <div class="boxb"> <a href="index.html" title="Forside" class="logo" > www.zarpaulo.com<a class="skrivestreg">&#124; </a> </a> </div>
-        <div> <img class="boxc" src="images/earth13.gif" </img> </div>
-</div>
+        <div class="boxb"> <a href="index.html" title="Forside" class="logo"> www.zarpaulo.com<a
+              class="skrivestreg">&#124; </a> </a> </div>
+        <div> <img class="boxc" src="images/earth13.gif"> </div>
+      </div>
       <input type="checkbox" id="toggle" />
       <div class="menu">
 
