--- a/zarp4/index.html
+++ b/zarp4/index.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8">
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
   <meta name="author" content="Jonas Halborg, Tobias Schou">
-  <meta name="description" content="Zar Paulos helt egen hjemmeside. Find: | Lyrik | Musik | Tourplan | Kontaktinformationer | - Zar Paulo er et ungt aarhusiansk band bestående af 5 venner med afsæt i 70'ernes postpunk og 80'ernes artrock">
-  <meta name="keywords" content="Zar Paulo, Zarpaulo, 80er, dansk, zar paulo, spotify, band, rock, synth, pop, ung, rock band, aarhus, musik, postpunk, artrock, upcoming, stop believing, i løb, radiotårn, højen, emil johannesen, gaffa, danske hits">
+  <meta name="description"
+    content="Zar Paulos helt egen hjemmeside. Find: | Lyrik | Musik | Tourplan | Kontaktinformationer | - Zar Paulo er et ungt aarhusiansk band bestående af 5 venner med afsæt i 70'ernes postpunk og 80'ernes artrock">
+  <meta name="keywords"
+    content="Zar Paulo, Zarpaulo, 80er, dansk, zar paulo, spotify, band, rock, synth, pop, ung, rock band, aarhus, musik, postpunk, artrock, upcoming, stop believing, i løb, radiotårn, højen, emil vammen johannesen, gaffa, danske hits">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zar Paulo</title>
   <link rel="stylesheet" href="css/style.css">
@@ -18,9 +20,10 @@
     <nav>
       <div class="burgermenu">
         <div class="boxa"> <label for="toggle">&#9776;</label> </div>
-        <div class="boxb"> <a href="index.html" title="Forside" class="logo" > www.zarpaulo.com<a class="skrivestreg">&#124; </a> </a> </div>
-        <div> <img class="boxc" src="images/earth13.gif" </img> </div>
-</div>
+        <div class="boxb"> <a href="index.html" title="Forside" class="logo"> www.zarpaulo.com<a
+              class="skrivestreg">&#124; </a> </a> </div>
+        <div> <img class="boxc" src="images/earth13.gif"> </div>
+      </div>
       <input type="checkbox" id="toggle" />
       <div class="menu">
 
@@ -35,7 +38,7 @@
 
   <main>
     <div class="container">
-			<section>
+      <section>
         <div class="billede-container">
           <div class="billede-flex">
             <img class="billedgalleri" src="images/1-1.gif">
@@ -43,77 +46,109 @@
           </div>
         </div>
       </section>
-    <div>
+      <div>
   </main>
   <footer>
     <div class="container_footer">
-  <div class="scrolling">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-  </div>
-</div>
+      <div class="scrolling">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+      </div>
+    </div>
   </footer>
 </body>
 
