--- a/zarp4/kontakt.html
+++ b/zarp4/kontakt.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8">
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
   <meta name="author" content="Jonas Halborg, Tobias Schou">
-  <meta name="description" content="Zar Paulos Kontaktinformation. Kontakt booker Andreas Løwén for at hyre Zar Paulo til at spille koncerter. Her kan du kontakte bandet Zar Paulo direkte på email eller telefon">
-  <meta name="keywords" content="Zar Paulo, kontakt, telefon, adresse, booker, booking, andreas løwen, andreas løwén, aarhus, danmark, dansk">
+  <meta name="description"
+    content="Zar Paulos Kontaktinformation. Kontakt booker Andreas Løwén for at hyre Zar Paulo til at spille koncerter. Her kan du kontakte bandet Zar Paulo direkte på email eller telefon">
+  <meta name="keywords"
+    content="Zar Paulo, kontakt, telefon, adresse, booker, booking, andreas løwen, andreas løwén, aarhus, danmark, dansk, The Artist">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kontaktinformation - Zar Paulo</title>
   <link rel="stylesheet" href="css/style.css">
@@ -17,9 +19,10 @@
     <nav>
       <div class="burgermenu">
         <div class="boxa"> <label for="toggle">&#9776;</label> </div>
-        <div class="boxb"> <a href="index.html" title="Forside" class="logo" > www.zarpaulo.com<a class="skrivestreg">&#124; </a> </a> </div>
-        <div> <img class="boxc" src="images/earth13.gif" </img> </div>
-</div>
+        <div class="boxb"> <a href="index.html" title="Forside" class="logo"> www.zarpaulo.com<a
+              class="skrivestreg">&#124; </a> </a> </div>
+        <div> <img class="boxc" src="images/earth13.gif"> </div>
+      </div>
       <input type="checkbox" id="toggle" />
       <div class="menu">
 
@@ -34,85 +37,119 @@
 
   <main>
 
-<h1> KONTAKT </h1>
+    <h1> KONTAKT </h1>
 
-<section class="kontaktinfo">
-<p> BOOKING: Andreas Løwén // <a href="mailto:andreas@theartist.eu" title="Kontakt">andreas@theartist.eu</a> <!--// <a href="tel:+4522583530">(+45) 22 58 35 30</a>--> </p>
-<p> ØVRIGE HENVENDELSER: <a href="mailto:kontakt@zarpaulo.com" title="Kontakt">kontakt@zarpaulo.com</a> </p>
-</section>
+    <section class="kontaktinfo">
+      <p> BOOKING: Andreas Løwén // <a href="mailto:andreas@theartist.eu" title="Kontakt">andreas@theartist.eu</a>
+        <!--// <a href="tel:+4522583530">(+45) 22 58 35 30</a>-->
+      </p>
+      <p> ØVRIGE HENVENDELSER: <a href="mailto:kontakt@zarpaulo.com" title="Kontakt">kontakt@zarpaulo.com</a> </p>
+    </section>
 
 
 
   </main>
   <footer>
     <div class="container_footer">
-  <div class="scrolling">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-  </div>
-</div>
+      <div class="scrolling">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+      </div>
+    </div>
   </footer>
 </body>
 
