--- a/zarp4/lyrik.html
+++ b/zarp4/lyrik.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8">
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
   <meta name="author" content="Jonas Halborg, Tobias Schou">
-  <meta name="description" content="Sangtekst og lyrik fra bandet Zar Paulo, som har lavet sangene Stop Believing, Højen, Radiotårn og I løb">
-  <meta name="keywords" content="Zar Paulo, lyrik, sangtekster zar paulo, stop believing lyrics, stop believing lyrik, højen lyrik, højen lyrics, radiotårn lyrik, radiotårn lyrics, i løb lyrik, i løb lyrics">
+  <meta name="description"
+    content="Sangtekst og lyrik fra bandet Zar Paulo, som har lavet sangene Stop Believing, Højen, Radiotårn og I løb">
+  <meta name="keywords"
+    content="Zar Paulo, lyrik, sangtekster zar paulo, stop believing lyrics, stop believing lyrik, højen lyrik, højen lyrics, radiotårn lyrik, radiotårn lyrics, i løb lyrik, i løb lyrics">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lyrik - Zar Paulo</title>
   <link rel="stylesheet" href="css/style.css">
@@ -17,9 +19,10 @@
     <nav>
       <div class="burgermenu">
         <div class="boxa"> <label for="toggle">&#9776;</label> </div>
-        <div class="boxb"> <a href="index.html" title="Forside" class="logo" > www.zarpaulo.com<a class="skrivestreg">&#124; </a> </a> </div>
-        <div> <img class="boxc" src="images/earth13.gif" </img> </div>
-</div>
+        <div class="boxb"> <a href="index.html" title="Forside" class="logo"> www.zarpaulo.com<a
+              class="skrivestreg">&#124; </a> </a> </div>
+        <div> <img class="boxc" src="images/earth13.gif"> </div>
+      </div>
       <input type="checkbox" id="toggle" />
       <div class="menu">
 
@@ -34,87 +37,119 @@
 
   <main>
 
-<h1> LYRIK </h1>
+    <h1> LYRIK </h1>
 
-<div class="lyrikmenu">
-  <img class="scan1" src="images/lyrik/scan1.jpg" </img>
-  <img class="scan2" src="images/lyrik/scan2.jpg" </img>
-  <img class="scan3" src="images/lyrik/scan3.jpg" </img>
-  <img class="scan4" src="images/lyrik/scan4.jpg" </img>
+    <div class="lyrikmenu">
+      <img class="scan1" src="images/lyrik/scan1.jpg">
+      <img class="scan2" src="images/lyrik/scan2.jpg">
+      <img class="scan3" src="images/lyrik/scan3.jpg">
+      <img class="scan4" src="images/lyrik/scan4.jpg">
 
 
-</div>
+    </div>
 
   </main>
   <footer>
     <div class="container_footer">
-  <div class="scrolling">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-  </div>
-</div>
+      <div class="scrolling">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+      </div>
+    </div>
   </footer>
 </body>
 
