--- a/zarp4/musik.html
+++ b/zarp4/musik.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
   <meta name="author" content="Jonas Halborg, Tobias Schou">
-  <meta name="description" content="Spotify links til Musik fra bandet Zar Paulo, som har lavet sangene Stop Believing, Højen, Radiotårn og I løb">
+  <meta name="description"
+    content="Spotify links til Musik fra bandet Zar Paulo, som har lavet sangene Stop Believing, Højen, Radiotårn og I løb">
   <meta name="keywords" content="Zar Paulo, lyrik, musik zar paulo, spotify, stop believing, højen, radiotårn, i løb">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Musik - Zar Paulo</title>
@@ -17,9 +18,10 @@
     <nav>
       <div class="burgermenu">
         <div class="boxa"> <label for="toggle">&#9776;</label> </div>
-        <div class="boxb"> <a href="index.html" title="Forside" class="logo" > www.zarpaulo.com<a class="skrivestreg">&#124; </a> </a> </div>
-        <div> <img class="boxc" src="images/earth13.gif" </img> </div>
-</div>
+        <div class="boxb"> <a href="index.html" title="Forside" class="logo"> www.zarpaulo.com<a
+              class="skrivestreg">&#124; </a> </a> </div>
+        <div> <img class="boxc" src="images/earth13.gif"> </div>
+      </div>
       <input type="checkbox" id="toggle" />
       <div class="menu">
 
@@ -34,10 +36,11 @@
 
   <main>
 
-  <h1> MUSIK </h1>
+    <h1> MUSIK </h1>
 
-  <p class="spotify"> <iframe src="https://open.spotify.com/embed/artist/5Org3M2mFFEFd8A57h9Yv2" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> </p>
-<!--
+    <p class="spotify"> <iframe src="https://open.spotify.com/embed/artist/5Org3M2mFFEFd8A57h9Yv2" width="300"
+        height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> </p>
+    <!--
   <figure class="afspiller">
       <figcaption>Lyt til vores musik:</figcaption>
       <audio controls preload="auto">
@@ -60,73 +63,105 @@ src="https://drive.google.com/file/d/1O8GVsQCHwIo30zYrLBIacRTRnR95ZJfE/preview">
 
   <footer>
     <div class="container_footer">
-  <div class="scrolling">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-    ZAR PAULO
-  </div><div class="scrolling" aria-hidden="true">
-  </div>
-</div>
+      <div class="scrolling">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+      </div>
+    </div>
   </footer>
 </body>
 
