--- a/zarp4/stems.html
+++ b/zarp4/stems.html
@@ -17,9 +17,10 @@
     <nav>
       <div class="burgermenu">
         <div class="boxa"> <label for="toggle">&#9776;</label> </div>
-        <div class="boxb"> <a href="index.html" title="Forside" class="logo" > www.zarpaulo.com<a class="skrivestreg">&#124; </a> </a> </div>
-        <div> <img class="boxc" src="images/earth13.gif" </img> </div>
-</div>
+        <div class="boxb"> <a href="index.html" title="Forside" class="logo"> www.zarpaulo.com<a
+              class="skrivestreg">&#124; </a> </a> </div>
+        <div> <img class="boxc" src="images/earth13.gif"> </div>
+      </div>
       <input type="checkbox" id="toggle" />
       <div class="menu">
 
@@ -34,79 +35,112 @@
 
   <main>
 
-<h1> STEMS </h1>
+    <h1> STEMS </h1>
 
   </main>
   <footer>
     <div class="container_footer">
       <div class="scrolling">
         ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
-        ZAR PAULO
-      </div><div class="scrolling" aria-hidden="true">
       </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
       </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div>
+      <div class="scrolling" aria-hidden="true">
+      </div>
+    </div>
     </div>
   </footer>
 </body>
+
 </html>
