--- a/zarp4/koncerter.html
+++ b/zarp4/koncerter.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
   <meta name="author" content="Jonas Halborg, Tobias Schou">
   <meta name="description"
-    content="Her kan du finde tourplanen for Zar Paulos Danmarksturne, samt et link til billetter. Zar Paulo spiller koncerter i Danmark hele foråret 2021 og efteråret 2021.">
+    content="Her kan du finde tourplanen for Zar Paulos Danmarksturné, samt et link til billetter. Zar Paulo spiller koncerter i Danmark foråret 2021 og efteråret 2021.">
   <meta name="keywords"
     content="zar paulo, Zar Paulo, zar paulo koncerts, zar paulo tickets, zar paulo koncerter, zar paulo billetter, tourplan, turne, koncerter, århus, københavn, odense, aalborg, esbjerg, herning, roskilde, upcoming, train, pumpehuset, gimle, tapperiet, walthers musikcafe, kulturmaskinen">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,34 +40,38 @@
     <h1> KONCERTER </h1>
 
     <section class="koncertliste">
+      <h3>FORÅRS TOUR 2021</h3>
       <p> D. 29 APRIL - TRAIN, AARHUS // KØB BILLET <a
           href="https://www.ticketmaster.dk/event/494593?language=da-dk&camefrom=traindk&brand=dk_train&clickId=S7xz7IyA5xyOU-wwUx0Mo3ERUkEy6KxaBzaAXA0&irgwc=1&utm_source=GigGum&utm_medium=affiliate&utm_campaign=380623&utm_content=1049986_7521"
-          title="Billetter">HER</a> </p>
+          target="_blank" title="Billetter">HER</a> </p>
       <p> D. 30 APRIL - KULTURMASKINEN, ODENSE // KØB BILLET <a
-          href="https://ticket.livebackend.com/kulturmaskinen/e/27174/" title="Billetter">HER</a> </p>
+          href="https://ticket.livebackend.com/kulturmaskinen/e/27174/" target="_blank" title="Billetter">HER</a> </p>
       <p> D. 1 MAJ - WALTHERS MUSIKCAFÉ, SKANDERBORG // KØB BILLET <a href="https://smukbillet.safeticket.dk/zarpaulo"
-          title="Billetter">HER</a> </p>
+          target="_blank" title="Billetter">HER</a> </p>
       <p> D. 6 MAJ - PUMPEHUSET, KØBENHAVN // KØB BILLET <a
-          href="https://www.billetto.dk/e/zar-paulo-harko-billetter-486061" title="Billetter">HER</a>
+          href="https://www.billetto.dk/e/zar-paulo-harko-billetter-486061" target="_blank" title="Billetter">HER</a>
         <!--// <a href="tel:+4522583530">(+45) 22 58 35 30</a>-->
       </p>
+      <h3>EFTERÅRS TOUR 2021</h3>
       <p> D. 4 SEPTEMBER - GIMLE, ROSKILDE // KØB BILLET <a href="https://ticket.livebackend.com/gimle/e/zar-paulo/"
-          title="Billetter">HER</a> </p>
+          target="_blank" title="Billetter">HER</a> </p>
       <p> D. 17 SEPTEMBER - CAFÉ VON HATTEN, RANDERS // KØB BILLET <a
           href="https://www.ticketmaster.dk/event/492995?clickId=S7xz7IyA5xyOU-wwUx0Mo3ERUkEy6PXjBzaAXA0&irgwc=1&utm_source=GigGum&utm_medium=affiliate&utm_campaign=380623&utm_content=1049986_7521"
-          title="Billetter">HER</a> </p>
+          target="_blank" title="Billetter">HER</a> </p>
       <p> D. 18 SEPTEMBER - SUBHUSET, HOLSTEBRO // KØB BILLET <a
-          href="https://www.billetto.dk/e/subhuset-x-zar-paulo-billetter-502966" title="Billetter">HER</a> </p>
+          href="https://www.billetto.dk/e/subhuset-x-zar-paulo-billetter-502966" target="_blank"
+          title="Billetter">HER</a> </p>
       <p> D. 24 SEPTEMBER - DRIVHUSET, SKIVE // KØB BILLET <a
-          href="https://www.billetto.dk/e/zar-paulo-det-indre-marked-drivhuset-billetter-502982"
+          href="https://www.billetto.dk/e/zar-paulo-det-indre-marked-drivhuset-billetter-502982" target="_blank"
           title="Billetter">HER</a> </p>
       <p> D. 25 SEPTEMBER - MEJERIET, SØNDERBORG // KØB BILLET <a
-          href="https://ticket.livebackend.com/sonderborghus/e/zar-paulo/" title="Billetter">HER</a> </p>
-      <p> D. 8 OKTOBER - RICHTER, GLADSAXE // KØB BILLET <a href="https://www.richter-gladsaxe.dk/k/soen-zar-paulo/"
-          title="Billetter">HER</a> </p>
+          href="https://ticket.livebackend.com/sonderborghus/e/zar-paulo/" target="_blank" title="Billetter">HER</a>
+      </p>
+      <p> D. 8 OKTOBER - RICHTER, GLADSAXE // KØB BILLET <a href="https://ticket.livebackend.com/richter/e/zar-paulo/"
+          target="_blank" title="Billetter">HER</a> </p>
       <p> D. 9 OKTOBER - TAPPERIET, KØGE // KØB BILLET <a
           href="https://www.ticketmaster.dk/event/493423?language=da-dk&clickId=S7xz7IyA5xyOU-wwUx0Mo3ERUkEy6PW7BzaAXA0&irgwc=1&utm_source=GigGum&utm_medium=affiliate&utm_campaign=380623&utm_content=1049986_7521"
-          title="Billetter">HER</a> </p>
+          target="_blank" title="Billetter">HER</a> </p>
 
     </section>
 
